--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "homepage": "https://tivaiice.github.io/MyWebsites/",
+  "author": "Tiva Wongratkatanyoo",
   "name": "myweb",
   "version": "0.1.0",
   "private": true,
